# ThinkRL

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE  Makefile  README.md  coverage.xml  debug_ckpt.py  dependency_map.md  my_reward.py  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  reward_config.py  run_eval.py  setup.py  test_output.md
.github/workflows/: build_pr_documentation.yml  ci.yml  clear_cache.yml  codeQL.yml  docker.yml  docs.yml  issue_auto_labeller.yml  lint.yml  pr_style_bot.yml  publish.yml  slow-tests.yml  tests.yml  tests_core.yml  tests_latest.yml  trufflehog.yml
configs/: ds_zero2.json
configs/algos/: grpo_config.yaml
docs/: DEPENDENCY_MAP.md  WRITING_SCHEDULE.md  reinforce_pp.md
docs/algorithms/: README.md
docs/source/: conf.py  getting_started.rst  index.rst
examples/: example_universal_reward.py
examples/reasoning/: train_grpo.py  train_reinforce_pp.py  train_star.py
examples/sft/: train_sft_small.py
tests/: __init__.py  conftest.py  test_sample.py
tests/test_algorithms/: __init__.py  base.py  test_base_algorithm.py  test_dapo.py  test_dpo.py  test_grpo.py  test_ipo.py  test_ppo.py  test_reinforce.py  test_vapo.py
tests/test_cli/: test_grpo_args.py  test_main.py  test_reinforce_pp_args.py  test_star_args.py
tests/test_config/: test_base.py
tests/test_data/: test_datasets.py  test_limits.py  test_loaders.py  test_packing.py  test_processors.py
tests/test_distributed/: test_strategies.py  test_utils.py
tests/test_integration/: test_vllm_client.py
tests/test_logging_module/: test_loggers.py  test_tensorboard.py  test_wandb.py
tests/test_models/: __init__.py  test_actor.py  test_base.py  test_critic.py  test_loader.py  test_loss.py  test_loss_new.py  test_model.py  test_papo_loss.py  test_pissa.py  test_prm.py  test_reward_model.py  test_utils.py
tests/test_peft/: __init__.py  test_lora.py
tests/test_rewards/: test_scorers.py  test_universal.py
tests/test_training/: test_kl_controller.py  test_mixed_precision.py  test_reinforce_pp_trainer.py
tests/test_utils/: __init__.py  test_agent.py  test_all_utils.py  test_checkpoint.py  test_data.py  test_distributed_sampler.py  test_distributed_util.py  test_logging.py  test_metrics.py  test_metrics_mock.py  test_processor.py  test_remote_rm_utils.py  test_seqlen_balancing.py  test_tokenizer.py
thinkrl/: __init__.py
thinkrl/algorithms/: __init__.py  base.py  copo.py  dapo.py  dpo.py  dr_grpo.py  grpo.py  ipo.py  kto.py  online_dpo.py  orpo.py  papo.py  ppo.py  prime.py  reinforce.py  reinforce_pp.py  rloo.py  star.py  vapo.py
thinkrl/cli/: __init__.py  grpo.py  main.py  star.py
thinkrl/config/: __init__.py  base.py
thinkrl/data/: __init__.py  datasets.py  loaders.py  packing.py  processors.py
thinkrl/distributed/: __init__.py  deepspeed.py  strategies.py  utils.py
thinkrl/integration/: __init__.py  vllm_client.py  vllm_worker.py
thinkrl/logging/: __init__.py  loggers.py  tensorboard.py  wandb.py
thinkrl/models/: __init__.py  actor.py  critic.py  loader.py  loss.py  model.py  prm.py  reward_model.py  utils.py
thinkrl/peft/: __init__.py  lora.py
thinkrl/rewards/: __init__.py  pipeline.py  scorer.py  universal.py
thinkrl/training/: __init__.py  grpo_trainer.py  kl_controller.py  mixed_precision.py  reinforce_pp_trainer.py  rl_utils.py  sft_trainer.py  star_trainer.py
thinkrl/utils/: __init__.py  agent.py  checkpoint.py  data.py  datasets.py  distributed_sampler.py  distributed_util.py  logging.py  metrics.py  processor.py  remote_rm_utils.py  seqlen_balancing.py  tokenizer.py  tokenizers.py
