[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ------------------------------------------------------------------
# Ruff Configuration (Replaces Black, Isort, Flake8)
# ------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88
src = ["thinkrl", "tests"]

[tool.ruff.lint]
# Enable specific rules:
# E: Pycodestyle errors
# F: Pyflakes
# I: Isort (import sorting)
# W: Pycodestyle warnings
# UP: Pyupgrade (modernizes syntax)
# B: Flake8-bugbear (finds likely bugs)
# T: Flake8-print (catches print statements)
# C: McCabe complexity
extend-select = ["E", "F", "I", "W", "UP", "B", "T", "C"]

ignore = [
    "B028",  # warning without explicit stacklevel
    "C408",  # dict() calls (stylistic)
    "C901",  # function complexity (too strict for ML code)
    "E501",  # Line too long (let ruff format handle this)
    "E741",  # Ambiguous variable name (common in ML: l, O, I)
]

[tool.ruff.lint.per-file-ignores]
# Allow prints in examples and scripts
"examples/**.py" = ["T201"]
"scripts/**.py" = ["T201"]

# Test files: allow prints for debugging and unused imports for availability checks
"tests/**.py" = [
    "T201",  # print statements (useful for test debugging/cleanup warnings)
    "F401",  # unused imports (used for availability checks via try/except)
    "B028",  # warnings without stacklevel (test warnings are fine)
]

# __init__.py: allow unused imports (re-exports)
"__init__.py" = ["F401"]

# Allow longer lines in config files
"**/config.py" = ["E501"]
"**/settings.py" = ["E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["thinkrl"]
# Combine imports from same package
force-sort-within-sections = true

# ------------------------------------------------------------------
# Testing Configuration (Pytest)
# ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# Default options: verbose output, short tracebacks, strict markers
addopts = """
    --verbose
    --tb=short
    --strict-markers
    --cov=thinkrl
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
"""

# Custom markers to organize the test suite
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring a CUDA device (deselect with '-m \"not gpu\"')",
    "integration: end-to-end training or inference tests",
    "unit: isolated unit tests",
    "distributed: tests requiring multi-GPU setup"
]

# Treat warnings as errors to ensure rigorous code quality
filterwarnings = [
    "error",
    # Ignore known benign warnings from dependencies
    "ignore::UserWarning:torch.utils.checkpoint:",
    "ignore::FutureWarning:transformers.tokenization_utils_base:",
    "ignore::UserWarning:cupy.cuda.memory:",
    "ignore::DeprecationWarning",  # Ignore deprecation warnings from dependencies
]

# ------------------------------------------------------------------
# Static Type Checking (Mypy)
# ------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# Relax these for practical ML development
disallow_untyped_defs = false  # Too strict for ML code
disallow_incomplete_defs = false  # Too strict for ML code
check_untyped_defs = true
disallow_untyped_decorators = false  # Decorators often don't have types

no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Can be noisy
strict_equality = true

# Ignore missing imports for ML libraries that don't ship strict stubs yet
[[tool.mypy.overrides]]
module = [
    "cupy.*",
    "scipy.*",
    "sklearn.*",
    "safetensors.*",
    "tqdm.*",
    "transformers.*",
    "peft.*",
    "deepspeed.*",
    "bitsandbytes.*",
    "vllm.*",
    "datasets.*",
    "evaluate.*"
]
ignore_missing_imports = true

# PyTorch specific settings
[[tool.mypy.overrides]]
module = "torch.*"
implicit_reexport = true

# Test files - very relaxed typing
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ------------------------------------------------------------------
# Coverage Configuration
# ------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["thinkrl"]
omit = [
    "*/tests/*",
    "*/setup.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",  # Type checking blocks
    "\\.\\.\\.",  # Ellipsis in stubs
]
ignore_errors = true

# Relax coverage requirement
fail_under = 0  # Don't fail on coverage (handle in CI separately)