[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ------------------------------------------------------------------
# Ruff Configuration (Replaces Black, Isort, Flake8)
# ------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88
src = ["thinkrl", "tests"]

[tool.ruff.lint]
extend-select = ["E", "F", "I", "W", "UP", "B", "T", "C"]

ignore = [
    "B028",  # warning without explicit stacklevel
    "C408",  # dict() calls (stylistic)
    "C901",  # function complexity (too strict for ML code)
    "E501",  # Line too long (let ruff format handle this)
    "E741",  # Ambiguous variable name (common in ML: l, O, I)
    "UP038", # Use X | Y in isinstance - disabled for readability/compatibility
    "UP007", # Use X | Y for Union - disabled for compatibility
    "B905",  # zip() without an explicit strict= parameter
    "W291",  # Trailing whitespace
    "W292",  # No newline at end of file
    "W293",  # Blank line contains whitespace
    "E203",  # Whitespace before ':'
]

[tool.ruff.lint.per-file-ignores]
"examples/**.py" = ["T201"]
"scripts/**.py" = ["T201"]
"tests/**.py" = ["T201", "F401", "B028"]
"__init__.py" = ["F401"]
"**/config.py" = ["E501"]
"**/settings.py" = ["E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["thinkrl"]
force-sort-within-sections = true

# ------------------------------------------------------------------
# Testing Configuration (Pytest)
# ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

addopts = """
    --verbose
    --tb=short
    --strict-markers
    --cov=thinkrl
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
"""

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring a CUDA device (deselect with '-m \"not gpu\"')",
    "integration: end-to-end training or inference tests",
    "unit: isolated unit tests",
    "distributed: tests requiring multi-GPU setup"
]

filterwarnings = [
    "error",
    "ignore::UserWarning:torch.utils.checkpoint:",
    "ignore::FutureWarning:transformers.tokenization_utils_base:",
    "ignore::UserWarning:cupy.cuda.memory:",
    "ignore::DeprecationWarning",
]

# ------------------------------------------------------------------
# Static Type Checking (Mypy)
# ------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true

disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
strict_equality = false

disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false

allow_untyped_globals = true
allow_redefinition = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "cupy.*",
    "cupyx.*",
    "scipy.*",
    "sklearn.*",
    "safetensors.*",
    "tqdm.*",
    "transformers.*",
    "peft.*",
    "deepspeed.*",
    "bitsandbytes.*",
    "vllm.*",
    "datasets.*",
    "evaluate.*",
    "PIL.*",
    "librosa.*",
    "numpy.*",
    "torch.*",
    "yaml.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "torch.*"
implicit_reexport = true

[[tool.mypy.overrides]]
module = [
    "thinkrl.utils.tokenizer",
    "thinkrl.utils.metrics",
    "thinkrl.utils.datasets",
    "thinkrl.utils.checkpoint",
    "thinkrl.utils.logging",
    "thinkrl.data.processors",
    "thinkrl.data.loaders",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ------------------------------------------------------------------
# Coverage Configuration
# ------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["thinkrl"]
omit = [
    "*/tests/*",
    "*/setup.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
ignore_errors = true
fail_under = 0

# ------------------------------------------------------------------
# Bandit Configuration
# ------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "examples", "docs"]
skips = ["B615", "B614"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']